--- a/css/main.css
+++ b/css/main.css
@@ -45,6 +45,24 @@ table {
 img {
   max-width: 100%; }
 
+.primary {
+  color: #fcab31; }
+
+.secondary {
+  color: #0f2535; }
+
+.secondary-pseudo {
+  color: #1b4463; }
+
+.alternative {
+  color: #0b9442; }
+
+.bright {
+  color: #FFF; }
+
+.dark {
+  color: #000; }
+
 h1, h2, h3, h4, h5, h6 {
   font-family: "Anybody", Helvetica, sans-serif;
   color: #000; }
@@ -77,7 +95,7 @@ h6 {
 p {
   font-size: 1rem; }
 
-.display-flex-column, .main-wrapper, .heroSection, .productos_main {
+.main-wrapper, .heroSection, .productos_main {
   display: flex;
   flex-direction: column; }
 
@@ -170,18 +188,14 @@ footer {
   background-color: #0f2535;
   border: 1px solid #0f2535; }
 
-.btn-primary:hover {
+.btn-primary:hover, .btn-primary:focus, .btn-primary:active {
   background-color: #1b4463;
   border: 1px solid #1b4463; }
 
 .btn-primary:focus {
-  background-color: #1b4463;
-  border: 1px solid #1b4463;
   box-shadow: none !important; }
 
 .btn-primary:active {
-  background-color: #1b4463;
-  border: 1px solid #1b4463;
   box-shadow: none !important; }
 
 .heroSection {
@@ -274,7 +288,7 @@ footer {
     color: #000;
     text-decoration: none; }
     .productos_main .sidebar a:hover {
-      border-bottom: solid 1px #fcab31; }
+      border-bottom: solid 2px #fcab31; }
 
 /* SERVICIOS */
 .serviciosDescripcion {
