--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,5 +1,7 @@
 @import "global/reset";
 @import "global/core";
+@import "global/mixins";
+@import "global/extends";
 @import "global/layout";
 @import "global/components";
 @import "pages/index";
