--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -4,7 +4,7 @@
     margin-top: -1rem;
     min-height: 90vh;
     
-    @extend .display-flex-column;
+    @extend %display-flex-column;
 
     justify-content: flex-end;
     
@@ -23,14 +23,14 @@
             
             h1,p{
                 font-weight: bolder;
-                color: $color-bright;
+                color: map-get($colors, bright);
                 text-shadow: 1px 1px #000;
             }
             
         }
     }
     .benefits {
-        color: $color-bright;
+        color: map-get($colors, bright);
         font-size: 1.5rem;
         padding: 1rem;
     }
@@ -64,7 +64,7 @@
 
 // SECTION TESTIMONIOS
 .testimonios {
-    color: $color-dark;
+    color: map-get($colors, dark);
     .item {
         margin: 0 auto;
         text-align: center;
