Reemplazo de clases de colores por map-get en ciertas ocasiones

--- a/scss/global/_core.scss
+++ b/scss/global/_core.scss
@@ -11,8 +11,9 @@ $colors: (
     dark: #000
 );
 
+// Crear clases para colores con each:
 @each $color, $code in $colors {
-    .#{$color} {
+    .color-#{$color} {
         color: $code;
     }
 };
