--- a/css/main.css
+++ b/css/main.css
@@ -45,22 +45,22 @@ table {
 img {
   max-width: 100%; }
 
-.primary {
+.color-primary {
   color: #fcab31; }
 
-.secondary {
+.color-secondary {
   color: #0f2535; }
 
-.secondary-pseudo {
+.color-secondary-pseudo {
   color: #1b4463; }
 
-.alternative {
+.color-alternative {
   color: #0b9442; }
 
-.bright {
+.color-bright {
   color: #FFF; }
 
-.dark {
+.color-dark {
   color: #000; }
 
 h1, h2, h3, h4, h5, h6 {
@@ -217,7 +217,6 @@ footer {
         color: #FFF;
         text-shadow: 1px 1px #000; }
   .heroSection .benefits {
-    color: #FFF;
     font-size: 1.5rem;
     padding: 1rem; }
 
@@ -236,21 +235,20 @@ footer {
 .negocios .carousel-caption {
   top: 0; }
 
-.testimonios {
-  color: #000; }
-  .testimonios .item {
-    margin: 0 auto;
-    text-align: center;
-    max-width: 500px; }
-  .testimonios .item-img {
-    margin: 0 auto;
-    width: 200px;
-    height: 200px; }
-  .testimonios .item-txt {
-    font-style: italic; }
+.testimonios .item {
+  margin: 0 auto;
+  text-align: center;
+  max-width: 500px; }
+
+.testimonios .item-img {
+  margin: 0 auto;
+  width: 200px;
+  height: 200px; }
+
+.testimonios .item-txt {
+  font-style: italic; }
 
 .historia, .premios {
-  color: #000;
   padding: 10px;
   text-align: center; }
   .historia .imgBackgroundOne, .premios .imgBackgroundOne {
@@ -296,7 +294,6 @@ footer {
 
 /* CONTACTO */
 .contacto_main {
-  color: #000;
   align-items: center;
   justify-content: center;
   justify-items: center;
