--- a/scss/global/_core.scss
+++ b/scss/global/_core.scss
@@ -2,6 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Anybody:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 // Variables:
+// map
 $colors: (
     primary: #fcab31,
     secondary: #0f2535,
@@ -40,6 +41,7 @@ a {
 }
 
 // Font-Sizes
+// each loop
 $font-size-list : h1, h2, h3, h4, h5, h6, p;
 $font-size-base : 16px;
 $font-size-upper : 40px;
@@ -49,4 +51,21 @@ $font-size-dec : 4px;
         font-size : ($font-size-upper / $font-size-base) + rem;
         }
     $font-size-upper : $font-size-upper - $font-size-dec;
+}
+
+// Mixins size y btn-style
+@mixin size ($width, $height) {
+    width: $width;
+    height: $height;
+}
+
+@mixin btn-style ($background, $border) {
+	background-color: $background;
+	border: $border;
+}
+
+// Extend con placeholder selector
+%display-flex-column{
+    display: flex;
+    flex-direction: column;
 }
