--- a/scss/pages/_conocenos.scss
+++ b/scss/pages/_conocenos.scss
@@ -3,11 +3,11 @@
     padding: 10px;
     text-align: center;
     .imgBackgroundOne{
-        background: url("./../public/apicultor_familia2_smaller.jpg");
+        background: url("./../public/apicultor_familia2.webp");
         z-index: -1; 
     }
     .imgBackgroundTwo{
-        background-image: url("./../public/apicultor_familia.jpg");
+        background-image: url("./../public/apicultor_familia.webp");
         z-index: -1;
     }
     
