hero section background webp

--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -8,7 +8,7 @@
 
     justify-content: flex-end;
     
-    background: linear-gradient(180deg,#0009,#0002, #0009), url("./../public/colmenas.webp");
+    background: linear-gradient(180deg,#0009,#0002, #0009), url("./../public/colmenas-prueba.webp");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
