--- a/css/main.css
+++ b/css/main.css
@@ -147,13 +147,16 @@ header {
 
 footer {
   font-family: "Anybody", Helvetica, sans-serif !important; }
+  footer li {
+    margin: 10px 0px; }
   footer a {
     color: #FFF;
     text-decoration: none; }
     footer a:hover {
       color: #fcab31 !important; }
   footer h6 {
-    color: #FFF !important; }
+    color: #FFF !important;
+    margin-top: 10px; }
 
 .card {
   background-color: #fcab31;
