--- a/scss/main.scss
+++ b/scss/main.scss
@@ -7,5 +7,6 @@
 @import "pages/productos";
 @import "pages/servicios";
 @import "pages/contacto";
+@import "pages/not_found";
 @import "global/mediaqueries";
 @import "global/animations";
