--- a/css/main.css
+++ b/css/main.css
@@ -323,7 +323,8 @@ footer {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center; }
+  align-items: center;
+  text-align: justify; }
   .main_notfound img {
     height: 300px;
     width: 300px; }
