error 404 align text

--- a/css/main.css
+++ b/css/main.css
@@ -324,7 +324,7 @@ footer {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  text-align: justify; }
+  text-align: center; }
   .main_notfound img {
     height: 300px;
     width: 300px; }
