--- a/scss/pages/_not_found.scss
+++ b/scss/pages/_not_found.scss
@@ -3,7 +3,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    text-align: justify;
+    text-align: center;
     img {
         height: 300px;
         width: 300px;
